--- a/WeatherForcast/Base.lproj/Main.storyboard
+++ b/WeatherForcast/Base.lproj/Main.storyboard
@@ -21,15 +21,41 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Ks-Br-Tvo">
                                 <rect key="frame" x="161" y="617" width="53" height="30"/>
                                 <state key="normal" title="Refresh"/>
+                                <connections>
+                                    <action selector="onRefresh:" destination="BYZ-38-t0r" eventType="touchUpInside" id="n7e-Nd-USf"/>
+                                </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dự báo nhiệt độ trung bình tháng giai đoạn 2020 - 2039" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OSE-y7-Xw7">
+                                <rect key="frame" x="0.0" y="0.0" width="383" height="16"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" red="0.37055522200000002" green="0.37056469920000001" blue="0.37055957319999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="vnm" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zUZ-Bg-wUa">
+                                <rect key="frame" x="139" y="43" width="97" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="97" id="rbU-qY-3qI"/>
+                                </constraints>
+                                <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="9Ks-Br-Tvo" secondAttribute="bottom" constant="20" id="0ET-dz-YHX"/>
+                            <constraint firstItem="OSE-y7-Xw7" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="CnZ-Si-lOf"/>
+                            <constraint firstItem="zUZ-Bg-wUa" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Hss-42-pEe"/>
+                            <constraint firstItem="OSE-y7-Xw7" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="TNj-yL-n6o"/>
+                            <constraint firstItem="zUZ-Bg-wUa" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="23" id="aoN-EB-Wz7"/>
                             <constraint firstItem="9Ks-Br-Tvo" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="pv5-eD-wr1"/>
+                            <constraint firstAttribute="trailing" secondItem="OSE-y7-Xw7" secondAttribute="trailing" constant="-8" id="qbS-pl-9B8"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="countryCodeField" destination="zUZ-Bg-wUa" id="Pxc-gm-BdQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
